--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <div class="row mt-2">
     <div id="divBotones" class="col text-center">
 
-      <button id="btnNuevo" class="btn btn-danger">Nuevo Juego</button>
-      <button id="btnPedir" class="btn btn-primary">Pedir carta</button>
-      <button id="btnDetener" class="btn btn-primary">Detener</button>
+      <button id="btnNew" class="btn btn-danger">New Game</button>
+      <button id="btnDraw" class="btn btn-primary">Draw Card</button>
+      <button id="btnStop" class="btn btn-primary">Stop</button>
 
     </div>
   </div>
@@ -25,7 +25,7 @@
   <div class="row container">
     <div class="col">
 
-      <h1>Jugador 1 - <small>0</small></h1>
+      <h1>Player 1 - <small>0</small></h1>
       <div id="player-cards">
       </div>
 
@@ -35,7 +35,7 @@
   <div class="row container mt-2">
     <div class="col">
 
-      <h1>Computadora - <small>0</small></h1>
+      <h1>Computer - <small>0</small></h1>
       <div id="computer-cards">
       </div>
 
